--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -99,7 +99,7 @@
     </section>
 
     <!-- Seção de Hard Skills -->
-    <section id="Hard Skills">
+    <section id="experiencia">
         <h2>Hard Skills</h2>
         <article>
           <h3>Graduação – Tecnologia em Análise e Desenvolvimento de Sistemas</h3>
@@ -126,7 +126,7 @@
     </section>
 
     <!-- Seção de Soft Skills -->
-    <section id="Soft Skills">
+    <section id="habilidades">
         <h2>Soft Skills</h2>
         <ul>
             <li>Líderança e Resiliência;</li>
