correção tag educação

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,6 @@
             <li><a href="#sobre">Sobre</a></li>
             <li><a href="#resumo">Resumo Profissional</a></li>
             <li><a href="#experiencia">Experiência Profissional</a></li>
-            <li><a href="#educacao">Educação</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#contato">Contato</a></li>
         </ul>
@@ -108,7 +107,7 @@
             UNINTER</p>
         </article>
         
-        <article id="educacao">
+        <article>
           <h3>Graduação – Tecnólogo em Logísticas</h3>
           <p>Concluído (Dez/2018)
           </br>    
